--- a/Source/Views/RenameColumn.xaml
+++ b/Source/Views/RenameColumn.xaml
@@ -1,20 +1,25 @@
-﻿<Window x:Class="WatchedFilmsTracker.Source.Views.RenameColumn"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:WatchedFilmsTracker.Source.Views"
-      mc:Ignorable="d"
-      Title="RenameColumn">
+﻿<Window x:Class="WatchedFilmsTracker.Source.Views.RenameColumnDialog"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:WatchedFilmsTracker.Source.Views"
+        mc:Ignorable="d"
+        WindowStartupLocation="CenterOwner"
+        Loaded="RenameColumnDialog_Loaded"
+
+    SizeToContent="WidthAndHeight"
+        Title="RenameColumn">
 
     <Grid Margin="15,15,15,15">
 
         <StackPanel Orientation="Vertical">
             <GroupBox>
                 <GroupBox.Header>Column name</GroupBox.Header>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock x:Name="TextBlockColumnName">Column name</TextBlock>
-                </StackPanel>
+                <DockPanel>
+                    <TextBox x:Name="TextBoxColumnName"
+                             VerticalAlignment="Center" />
+                </DockPanel>
             </GroupBox>
 
             <StackPanel Orientation="Horizontal">
