--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -159,7 +159,7 @@
                                     HorizontalAlignment="Left"
                                     VerticalAlignment="Top"
                                     UseLayoutRounding="False"
-                                    Click="NewFile">
+                                    Click="NewFileAction">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="/Assets/ButtonIcons/newFile.png"
                                            Stretch="None"
@@ -473,7 +473,7 @@
                           MaxWidth="{Binding Width, ElementName=groupBoxQuickActions}"
                           Margin="0,0,0,30">
                     <GroupBox.Header>List of watched films data</GroupBox.Header>
-                    <TabControl>
+                    <TabControl x:Name="OpenedFilesTabs">
                         <TabItem>
                             <TabItem.Header>
                                 <StackPanel Orientation="Horizontal">
