--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -174,6 +174,10 @@
                     <GroupBox.Header>Collection preferences</GroupBox.Header>
                     <StackPanel>
                         <Label Content="List of columns and data types" />
+
+                        <StackPanel x:Name="StackPanelColumnList"
+                                    Orientation="Vertical"></StackPanel>
+                        <Button>Apply changes</Button>
                     </StackPanel>
                 </GroupBox>
 
