--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -1,15 +1,20 @@
 ﻿<Window x:Class="WatchedFilmsTracker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
         Title="MainWindow"
         KeyDown="Window_KeyDown"
         MinHeight="225"
         MinWidth="1150"
         ScrollViewer.CanContentScroll="True"
         Height="600">
+
+    <Window.Resources>
+        <!-- Reusable DataTemplate -->
+        <DataTemplate x:Key="ColumnItemTemplate">
+            <Label Content="{Binding DisplayText}" />
+        </DataTemplate>
+    </Window.Resources>
+
     <Grid>
 
         <!-- Upper panel for all data-->
@@ -23,80 +28,83 @@
                         Background="White">
 
                 <!--File information-->
-                <GroupBox Background="#33FF0000">
-                    <GroupBox.Header>File information</GroupBox.Header>
-                    <StackPanel>
-                        <StackPanel Orientation="Vertical">
+                <Expander Header="File information">
+                    <GroupBox Background="#33FF0000">
 
-                            <GroupBox>
-                                <GroupBox.Header>File path</GroupBox.Header>
-                                <TextBox x:Name="TextBoxFilePath"
-                                         Text="{Binding Filepath}"
-                                         VerticalAlignment="Center"
-                                         TextWrapping="WrapWithOverflow"
-                                         Width="230"
-                                         IsReadOnly="True"
-                                         HorizontalAlignment="Left" />
-                            </GroupBox>
+                        <GroupBox.Header>File information</GroupBox.Header>
+                        <StackPanel>
+                            <StackPanel Orientation="Vertical">
+
+                                <GroupBox>
+                                    <GroupBox.Header>File path</GroupBox.Header>
+                                    <TextBox x:Name="TextBoxFilePath"
+                                             Text="{Binding Filepath}"
+                                             VerticalAlignment="Center"
+                                             TextWrapping="WrapWithOverflow"
+                                             Width="230"
+                                             IsReadOnly="True"
+                                             HorizontalAlignment="Left" />
+                                </GroupBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="Delimiter: "></Label>
+                                <Label x:Name="LabelCurrentDelimiter"
+                                       Content=""></Label>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="Collection type: "></Label>
+                                <Button x:Name="ButtonCurrentFileCollectionType"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        Click="ButtonCurrentFileCollectionType_Click">
+                                    <StackPanel Orientation="Vertical">
+                                        <Image x:Name="ImageCurrentFileCollectionType"
+                                               Source="/Assets/TabIcons/other.png"
+                                               Stretch="None"
+                                               RenderOptions.BitmapScalingMode="NearestNeighbor"
+                                               RenderOptions.EdgeMode="Aliased" />
+                                        <TextBlock x:Name="TextBlockCurrentFileCollectionType"
+                                                   Text="Other"
+                                                   HorizontalAlignment="Left"
+                                                   VerticalAlignment="Center" />
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical">
+                                <GroupBox>
+                                    <GroupBox.Header>Comments before</GroupBox.Header>
+                                    <TextBox x:Name="TextBoxCommentsBefore"
+                                             HorizontalAlignment="Left"
+                                             VerticalAlignment="Center"
+                                             IsReadOnly="True"
+                                             TextWrapping="WrapWithOverflow"
+                                             Width="232"
+                                             Text="{Binding CommentBefore}" />
+                                </GroupBox>
+                                <GroupBox>
+                                    <GroupBox.Header>Comments</GroupBox.Header>
+                                    <TextBox x:Name="TextBoxProgramComments"
+                                             HorizontalAlignment="Left"
+                                             VerticalAlignment="Center"
+                                             TextWrapping="WrapWithOverflow"
+                                             IsReadOnly="True"
+                                             Width="232"
+                                             Text="{Binding Comment}" />
+                                </GroupBox>
+                                <GroupBox>
+                                    <GroupBox.Header>Comments after</GroupBox.Header>
+                                    <TextBox x:Name="TextBoxCommentsAfter"
+                                             HorizontalAlignment="Left"
+                                             VerticalAlignment="Center"
+                                             IsReadOnly="True"
+                                             TextWrapping="WrapWithOverflow"
+                                             Width="232"
+                                             Text="{Binding CommentAfter}" />
+                                </GroupBox>
+                            </StackPanel>
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Label Content="Delimiter: "></Label>
-                            <Label x:Name="LabelCurrentDelimiter"
-                                   Content=""></Label>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Label Content="Collection type: "></Label>
-                            <Button x:Name="ButtonCurrentFileCollectionType"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    Click="ButtonCurrentFileCollectionType_Click">
-                                <StackPanel Orientation="Vertical">
-                                    <Image x:Name="ImageCurrentFileCollectionType"
-                                           Source="/Assets/TabIcons/other.png"
-                                           Stretch="None"
-                                           RenderOptions.BitmapScalingMode="NearestNeighbor"
-                                           RenderOptions.EdgeMode="Aliased" />
-                                    <TextBlock x:Name="TextBlockCurrentFileCollectionType"
-                                               Text="Other"
-                                               HorizontalAlignment="Left"
-                                               VerticalAlignment="Center" />
-                                </StackPanel>
-                            </Button>
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical">
-                            <GroupBox>
-                                <GroupBox.Header>Comments before</GroupBox.Header>
-                                <TextBox x:Name="TextBoxCommentsBefore"
-                                         HorizontalAlignment="Left"
-                                         VerticalAlignment="Center"
-                                         IsReadOnly="True"
-                                         TextWrapping="WrapWithOverflow"
-                                         Width="232"
-                                         Text="{Binding CommentBefore}" />
-                            </GroupBox>
-                            <GroupBox>
-                                <GroupBox.Header>Comments</GroupBox.Header>
-                                <TextBox x:Name="TextBoxProgramComments"
-                                         HorizontalAlignment="Left"
-                                         VerticalAlignment="Center"
-                                         TextWrapping="WrapWithOverflow"
-                                         IsReadOnly="True"
-                                         Width="232"
-                                         Text="{Binding Comment}" />
-                            </GroupBox>
-                            <GroupBox>
-                                <GroupBox.Header>Comments after</GroupBox.Header>
-                                <TextBox x:Name="TextBoxCommentsAfter"
-                                         HorizontalAlignment="Left"
-                                         VerticalAlignment="Center"
-                                         IsReadOnly="True"
-                                         TextWrapping="WrapWithOverflow"
-                                         Width="232"
-                                         Text="{Binding CommentAfter}" />
-                            </GroupBox>
-                        </StackPanel>
-                    </StackPanel>
-                </GroupBox>
+                    </GroupBox>
+                </Expander>
 
                 <!--Settings border-->
                 <GroupBox Background="#330010FF">
@@ -175,18 +183,15 @@
                     <StackPanel>
                         <Label Content="List of columns and data types" />
                         <ItemsControl x:Name="ItemsColumnsDataTypes"
-                                      ItemsSource="{Binding ColumnsAndDataTypes}">
+                                      ItemsSource="{Binding ColumnsAndDataTypes}"
+                                      ItemTemplate="{StaticResource ColumnItemTemplate}">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <StackPanel></StackPanel>
+                                    <StackPanel Orientation="Vertical" />
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Label Content="{Binding DisplayText}"></Label>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
                         </ItemsControl>
+                        <Button Click="ShowColumnTypesClick">Show columns data types</Button>
                         <Button>Apply changes</Button>
                     </StackPanel>
                 </GroupBox>
@@ -584,7 +589,6 @@
                 </StackPanel>
 
                 <!--Watched films table border-->
-
                 <GroupBox x:Name="groupBoxFilmList"
                           DockPanel.Dock="Left"
                           MaxWidth="{Binding Width, ElementName=groupBoxQuickActions}"
