--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -1,6 +1,8 @@
 ﻿<Window x:Class="WatchedFilmsTracker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:conv="clr-namespace:WatchedFilmsTracker.Source.Converters"
+        xmlns:local="clr-namespace:WatchedFilmsTracker.Source.ManagingDatagrid"
         Title="MainWindow"
         KeyDown="Window_KeyDown"
         MinHeight="225"
@@ -9,11 +11,46 @@
         Height="600">
 
     <Window.Resources>
-        <!-- Reusable DataTemplate -->
         <DataTemplate x:Key="ColumnItemTemplate">
-            <Label Content="{Binding DisplayText}" />
+            <StackPanel Orientation="Vertical"
+                        Margin="3">
+
+                <!-- First line: Column Header (current type) -->
+                <Label Margin="0"
+                       Padding="0">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding DataGridTextColumn.Header}"
+                                   FontWeight="Bold" />
+                        <TextBlock Text=" (" />
+                        <TextBlock Text="{Binding DataType}"
+                                   FontStyle="Italic" />
+                        <TextBlock Text=")" />
+                    </StackPanel>
+                </Label>
+
+                <!-- Second line: List all data types -->
+                <ItemsControl ItemsSource="{Binding DataGridManager.AllDataTypes}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Label Content="{Binding}"
+                                   Margin="1,0"
+                                   Padding="0"
+                                   Foreground="Gray"
+                                   FontSize="11" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+
+            </StackPanel>
         </DataTemplate>
     </Window.Resources>
+
+
 
     <Grid>
 
@@ -177,9 +214,9 @@
                     </StackPanel>
                 </GroupBox>
 
-                <!--Collection Preferences-->
+                <!--Table Structure-->
                 <GroupBox Background="#337200FF">
-                    <GroupBox.Header>Collection preferences</GroupBox.Header>
+                    <GroupBox.Header>Table structure</GroupBox.Header>
                     <StackPanel>
                         <Label Content="List of columns and data types" />
                         <ItemsControl x:Name="ItemsColumnsDataTypes"
@@ -191,8 +228,10 @@
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
                         </ItemsControl>
-                        <Button Click="ShowColumnTypesClick">Show columns data types</Button>
+                        <Button Click="ShowColumnTypesClick">DEBUG print columns and data types</Button>
                         <Button>Apply changes</Button>
+                        <Button>Apply z-index of columns</Button>
+                        <Button>Apply order of columns</Button>
                     </StackPanel>
                 </GroupBox>
 
