--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -1,8 +1,6 @@
 ﻿<Window x:Class="WatchedFilmsTracker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:conv="clr-namespace:WatchedFilmsTracker.Source.Converters"
-        xmlns:local="clr-namespace:WatchedFilmsTracker.Source.ManagingDatagrid"
         Title="MainWindow"
         KeyDown="Window_KeyDown"
         MinHeight="225"
@@ -32,11 +30,8 @@
                 <ItemsControl ItemsSource="{Binding DataGridManager.AllDataTypes}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Label Content="{Binding}"
-                                   Margin="1,0"
-                                   Padding="0"
-                                   Foreground="Gray"
-                                   FontSize="11" />
+                            <RadioButton Content="{Binding}"
+                                         GroupName="{Binding DataContext.UniqueId, RelativeSource={RelativeSource AncestorType=StackPanel}}" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                     <ItemsControl.ItemsPanel>
@@ -45,12 +40,9 @@
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                 </ItemsControl>
-
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
-
-
 
     <Grid>
 
